# CCFL

./: CMakeLists.txt  README.md
include/: fc_allreduce_pipeline.cuh
scripts/: run.sh
src/: fc_allreduce_pipeline.cu  main.cu
